topic/solution layout build

--- a/src/app/components/spider-chart/spider-chart.component.html
+++ b/src/app/components/spider-chart/spider-chart.component.html
@@ -1,11 +1,1 @@
-<!-- <div [ngClass]="{'container': withBorder}">
-  <canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
-</div> -->
-<canvas
-  id="canvas"
-  baseChart
-  [data]="spiderData"
-  [options]="spiderChartOptions"
-  [type]="spiderChartType"
-  >okk
-</canvas>
+<canvas id="canvas" baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"></canvas>
