--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -526,31 +526,34 @@
       font-size: 11pt;
     }
 
-    .dates {
+    .dates,
+    .rdmore {
       font-style: italic;
       color: rgba($color: #000000, $alpha: 0.4);
       font-size: 10pt;
       margin-top: 5px;
+      display: flex;
+      align-items: center;
+
+      * {
+        margin: 0;
+      }
+
+      small {
+        margin-right: 10px;
+      }
+    }
+
+    .dates {
+      justify-content: flex-start;
+    }
+
+    .rdmore {
+      justify-content: flex-end;
     }
 
     .mess {
       text-align: justify;
-    }
-
-    &.nocom {
-      text-align: center;
-
-      h4 {
-        margin-bottom: 5px;
-      }
-
-      p {
-        margin-bottom: 10px;
-      }
-
-      button {
-        margin: auto !important;
-      }
     }
   }
 
@@ -639,7 +642,9 @@
     .slt {
       padding-bottom: 10px;
       margin-bottom: 10px;
-      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.3);
+      display: flex;
+      align-items: center;
 
       button {
         text-align: left;
@@ -654,16 +659,22 @@
     &.nocom {
       text-align: center;
 
-      h4 {
-        margin-bottom: 5px;
-      }
-
-      p {
-        margin-bottom: 10px;
-      }
-
       button {
         margin: auto !important;
+        margin-top: 20px !important;
+      }
+    }
+
+    .set-2 {
+      button {
+        zoom: 0.7;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 11pt;
+        font-weight: 300;
+        pointer-events: none;
+        border: 1px solid rgba($color: #000000, $alpha: 0.3);
       }
     }
   }
