--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -103,7 +103,7 @@
                 <mat-form-field appearance="outline">
                   <mat-label>Agregar:</mat-label>
                   <mat-select>
-                    <mat-option (click)="openModalTestimony($event)" disabled>
+                    <mat-option (click)="openModalTestimony($event)">
                       <small>Testimonio</small>
                     </mat-option>
                     <mat-option disabled>
